--- a/public/new.html
+++ b/public/new.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="../styles.css">
-  <title></title>
+    <title></title>
 </head>
-<body>
-<h1>What did you learn today? </h1>
 
-<form action="/new-post" method="post">
-  Title or topic:<br>
-  <input type="text" name="title" placeholder="Title"><br>
-  Date:<br>
-  <input type="text" name="date" placeholder="yyyy/mm/dd"><br>
-  Author:<br>
-  <input type="text" name="author" placeholder="Name"><br>
-  Content:<br>
-  <textarea name="content" class="content" placeholder="What did you learn today?"></textarea><br>
-  <input type="submit" value="Submit" class="submit">
-</form>
-<a href="/"><button>GO HOME</button></a>
+<body>
+    <h1>What did you learn today? </h1>
+
+    <form action="/new-post" method="post">
+        Title or topic:
+        <br>
+        <input type="text" name="title" placeholder="Title">
+        <br> Date:
+        <br>
+        <input type="text" name="date" placeholder="yyyy/mm/dd">
+        <br> Author:
+        <br>
+        <input type="text" name="author" placeholder="Name">
+        <br> Content:
+        <br>
+        <textarea name="content" class="content" placeholder="What did you learn today?"></textarea>
+        <br>
+        <input type="submit" value="Submit" class="submit">
+    </form>
+    <a href="/">
+        <button>GO HOME</button>
+    </a>
 
 
 </body>
+
 </html>
